tests/snapshot/error/source_locations/expression/call/basic.exp
Error: This is an error
   ┌ source_locations/expression/call/basic.js:10:9
   |
10 |   throw new Error('This is an error');
   |         ^
Stack trace:
  at baz (source_locations/expression/call/basic.js:10:9)
  at bar (source_locations/expression/call/basic.js:6:3)
  at foo (source_locations/expression/call/basic.js:2:3)
  at <global> (source_locations/expression/call/basic.js:13:1)